--- a/stardustPlay/css/root.css
+++ b/stardustPlay/css/root.css
@@ -1,3 +1,4 @@
+
 :root{
     --cor-primaria: #e5e1ee;
     --cor-secundaria: #0e1428;
@@ -15,4 +16,5 @@ body{
     font-family: var(--fonte-principal);
     position: relative;
     z-index: -2;
+    overflow-x: hidden;
 }
