--- a/stardustPlay/css/header.css
+++ b/stardustPlay/css/header.css
@@ -6,6 +6,7 @@ header{
 .cabecalho{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
     top: 0;
     padding: 0.3em 1em;
@@ -91,7 +92,9 @@ header{
 .container_pesquisa{
     all: unset;
     height: 2em;
-    width: 25em;
+    width: 30%;
+    min-width: 10em;
+    margin: 0 6em;
     border: 1px solid var(--cor-quinta);
     color: white;
     border-radius: 1em;
@@ -105,6 +108,19 @@ header{
 }
 
 /*TERCEIRO CONTAINER*/
+.container_logado{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}       /*foto de perfil*/
+.logado_foto{
+    height: 3em;
+    width: 3em;
+    border-radius: 10em;
+    object-fit: cover;
+    border: 2px solid var(--cor-quinta);
+}
+
 .container_login{
     display: flex;
     align-items: center;
