--- a/stardustPlay/css/signIn.css
+++ b/stardustPlay/css/signIn.css
@@ -12,7 +12,7 @@
     top: 1em;
     left: 1em;
     padding: 0.3em;
-    border: 3px solid var(--cor-quinta);
+    border: 3px solid var(--cor-terciaria);
     border-radius: 4em;
 }
 .homeLink:hover{
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-primaria);
 }
 
 .formulario form{
@@ -32,6 +32,8 @@
     flex-direction: column;
     color: var(--cor-quinta);
 }
+
+/*BANNER LATERAL*/
 
 .banner{
     display: flex;
@@ -41,7 +43,7 @@
     background-image: url(../imgs/starwarsWallpaper.jpeg);
     background-size: cover;
     background-position: center;
-    color: var(--cor-primaria);
+    color: var(--cor-terciaria);
 }
 
 .banner_content{
@@ -59,11 +61,10 @@
     flex-direction: column;
     align-items: center;
     width: 6em;
-    color: var(--cor-quinta);
 }
 .banner_vantagens_item img{
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-primaria);
     padding: 0.8em;
-    border: 2px solid var(--cor-quarta);
+    border: 2px solid var(--cor-quinta);
     border-radius: 4em;
 }
