--- a/stardustPlay/css/header.css
+++ b/stardustPlay/css/header.css
@@ -9,9 +9,10 @@ header{
     align-items: center;
     position: relative;
     top: 0;
-    background-color: var(--cor-secundaria);
-    color: var(--cor-quinta);
-    border-bottom: 5px solid var(--cor-terciaria);
+    background-color: var(--cor-primaria-glass);
+    backdrop-filter: blur(30px);
+    box-shadow: 0px 0px 30px var(--cor-primaria);
+    color: var(--cor-terciaria);
 }
 .container{
     display: flex;
@@ -55,7 +56,7 @@ header{
     transform: translateX(-100%);
     width: 250px;
     height: 100vh;
-    background-color: var(--cor-secundaria);
+    background-color: black;
     transition: 0.5s;
 }
 .close{
@@ -82,7 +83,7 @@ header{
 .linkHome{
     display: flex;
     text-decoration: none;
-    color: var(--cor-quinta);
+    color: var(--cor-terciaria);
 }
 
 /*SEGUNDO CONTAINER*/
@@ -92,20 +93,20 @@ header{
     height: 2em;
     width: 30%;
     min-width: 10em;
-    margin: 0 6em;
-    border: 1px solid var(--cor-quinta);
-    color: white;
+    margin: 0 2em;
+    border: 1px solid var(--cor-terciaria);
     border-radius: 1em;
     padding-left: 1em;
 }
 .container_pesquisa::placeholder{
-    color: rgba(255, 255, 255, 0.76);
+    color: var(--cor-terciaria);
 }
 .container_pesquisa:focus{
-    border: 2px solid var(--cor-terciaria);
+    border: 2px solid var(--cor-secundaria);
 }
 
 /*TERCEIRO CONTAINER*/
+/*Caso esteja logado*/
 .container_logado{
     display: flex;
     align-items: center;
@@ -115,7 +116,7 @@ header{
     width: 3em;
     border-radius: 10em;
     object-fit: cover;
-    border: 2px solid var(--cor-quinta);
+    border: 2px solid var(--cor-secundaria-hover);
 }
 
 .container>a{
@@ -129,7 +130,7 @@ header{
 .container_login{
     display: flex;
     align-items: center;
-    border: 1px solid var(--cor-quarta);
+    border: 1px solid var(--cor-secundaria);
     padding: 0.5em 0.5em;
     border-radius: 2em;
     margin-right: 1em;
@@ -137,7 +138,7 @@ header{
 }
 
 .container_login:hover{
-    background-color: var(--cor-secundaria-hover);
+    background-color: var(--cor-primaria-hover);
 }
 
 .container_login_img{
