--- a/stardustPlay/css/pagDev.css
+++ b/stardustPlay/css/pagDev.css
@@ -18,6 +18,11 @@
     flex-grow: 1;
     flex-basis: 28em;
     gap: 1em;
-    border: 2px solid black;
+    border: 1px solid var(--cor-secundaria);
+    border-radius: 1em;
+    cursor: pointer;
+}
+.opcoes_item:hover{
+    border: 3px double var(--cor-quinta);
 }
 
