--- a/stardustPlay/css/pagInicial.css
+++ b/stardustPlay/css/pagInicial.css
@@ -6,9 +6,10 @@
     justify-content: center;
     z-index: -1;
     height: 70vh;
-    background-image: url(../imgs/helldrivesWallpaper.jpeg);
+    background-image: url(../imgs/banner_espaco.jpg);
     background-position: center;
     background-size: cover;
+    border-bottom: 4px solid var(--cor-quinta);
     filter: brightness(80%);
 }
 
@@ -16,15 +17,11 @@
     display: flex;
     position: absolute;
     overflow: hidden;
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-primaria);
     border-radius: 2em;
-    border: 2px solid var(--cor-quarta);
+    border: 4px solid var(--cor-quinta);
     top: 100%;
     transform: translateY(-50%);   
-}
-
-.banner_container a{
-    text-decoration: none;
 }
 
 .banner_container_item{
@@ -32,13 +29,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: var(--cor-quarta);
+    color: var(--cor-terciaria);
     width: 10em;
     padding: 0.5em 0;
     transition: 0.2s;
 }
 .banner_container_item:hover{
-    background-color: var(--cor-secundaria-hover);
+    background-color: var(--cor-primaria-hover);
     transition: 0.2s;
 }
 
