--- a/stardustPlay/css/formGame.css
+++ b/stardustPlay/css/formGame.css
@@ -77,7 +77,7 @@ textarea{
 
 #qtnTxt{
     position: absolute;
-    top: -1em;
+    top: 0;
     right: 0;
 }
 /*-----------------------------------------*/
