--- a/stardustPlay/css/header.css
+++ b/stardustPlay/css/header.css
@@ -11,8 +11,9 @@ header{
     top: 0;
     background-color: var(--cor-primaria-glass);
     backdrop-filter: blur(30px);
-    box-shadow: 0px 0px 30px var(--cor-primaria);
+    box-shadow: 0px 0px 40px var(--cor-primaria-hover);
     color: var(--cor-terciaria);
+    padding: 0 1em;
 }
 .container{
     display: flex;
@@ -26,60 +27,6 @@ header{
 }
 
 /*PRIMEIRO CONTAINER*/
-
-.container_menu_burguer{
-    width: 40px;
-    height: 30px;
-    background-image: url(../imgs/menu_burguer.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    display: inline-block;
-    background-size: cover;
-    transition: 0.2s;
-}
-
-.container_menu_burguer:hover{
-    transform: scale(1.1);
-    transition: 0.2s;
-}
-
-.container input[type="checkbox"]{
-    display: none;
-}
-
-.container_sidebar{
-    display: flex;
-    position: absolute;
-    z-index: 3;
-    top: 0;
-    left: calc(0 - 1em);
-    transform: translateX(-100%);
-    width: 250px;
-    height: 100vh;
-    background-color: black;
-    transition: 0.5s;
-}
-.close{
-    position: absolute;
-    display: none;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 2;
-    transition: 1s;
-}
-
-.container_menu_burguer_btn:checked ~.container_sidebar{
-    transform: translateX(0);
-    transition: 0.5s;
-}
-.container_menu_burguer_btn:checked ~.container_sidebar_close>.close{
-    background-color: rgba(0, 0, 0, 0.247);
-    display: block;
-    transition: 1s;
-}
-
 .linkHome{
     display: flex;
     text-decoration: none;
@@ -87,22 +34,36 @@ header{
 }
 
 /*SEGUNDO CONTAINER*/
+.content_pesquisa{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .container_pesquisa{
     all: unset;
     height: 2em;
-    width: 30%;
     min-width: 10em;
-    margin: 0 2em;
     border: 1px solid var(--cor-terciaria);
-    border-radius: 1em;
+    border-radius: 1em 0em 0em 1em;
     padding-left: 1em;
 }
 .container_pesquisa::placeholder{
     color: var(--cor-terciaria);
 }
 .container_pesquisa:focus{
-    border: 2px solid var(--cor-secundaria);
+    border: 1px solid var(--cor-secundaria);
+}
+
+.content_pesquisa img{
+    padding: 0 0.5em;
+    height: 100%;
+    border-radius: 0 1em 1em 0;
+    border: 1px solid;
+    cursor: pointer;
+}
+.content_pesquisa>img:active{
+    background-color: var(--cor-primaria-hover);
 }
 
 /*TERCEIRO CONTAINER*/
