--- a/stardustPlay/css/root.css
+++ b/stardustPlay/css/root.css
@@ -23,7 +23,7 @@ body{
     z-index: 0;
     overflow-x: hidden;
     color: var(--cor-terciaria);
-    font-family: var(--fonte-principal);
+    font-family: var(--fonte-texto);
     background-color: var(--cor-primaria);
     background-size: cover;
     background-position: center;
