--- a/stardustPlay/css/comprarJogo.css
+++ b/stardustPlay/css/comprarJogo.css
@@ -22,7 +22,7 @@ body {
     align-items: center;
     overflow-y: auto;
     max-height: 100vh;
-    padding: 7em 2em 5em;
+    padding: 7em 0 3em;
     background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 30%, rgba(0, 0, 0, 0.801) 77%);
 }
 
@@ -47,6 +47,7 @@ body {
 .game_information {
     display: flex;
     width: 100%;
+    padding: 0 5vw 0;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -56,7 +57,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
+    width: 50%;
     min-width: 22em;
 }
 
@@ -91,7 +92,7 @@ body {
     display: flex;
     align-items: center;
     border-radius: 1em;
-    padding: 0 0.3em;
+    padding: 0.1em 0.3em;
     color: var(--cor-primaria);
     background-color: var(--cor-secundaria);
 
@@ -237,7 +238,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90%;
+    width: 100%;
     margin-bottom: 5em;
 }
 
@@ -252,6 +253,7 @@ body {
     flex-direction: column;
     text-align: center;
     gap: 0.5em;
+    padding: 0 5vw 0;
 }
 .descricao h2{
     font-family: var(--fonte-titulo);
@@ -279,7 +281,7 @@ body {
 }
 
 .galeria .swiper {
-    width: 85vw;
+    width: 100vw;
     gap: 1em;
 }
 
@@ -319,9 +321,9 @@ body {
 @media (min-width: 768px) and (max-width: 991px) {}
 
 @media (max-width: 767px) {
-    .game_capa {
+    /* .game_capa {
         width: 100%;
-    }
+    } */
 
     .game_pay {
         margin-top: 5em;
