--- a/stardustPlay/css/pagInicial.css
+++ b/stardustPlay/css/pagInicial.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    padding: 35vh 10vh 10vh;
+    padding: 30vh 10vh 5vh;
     background: linear-gradient(0deg, rgba(0,9,14,1) 0%, rgba(0,9,14,0) 100%);}
 
 .container_pagina >section{
@@ -29,8 +29,8 @@ body {
 
 .section_pesquisar .pesquisar-titulo{
     font-size: 3.5rem;
-    font-family: var(--fonte-titulo);
-    color: var(--cor-secundaria);
+    font-family: var(--fonte-titulo2);
+    color: var(--cor-secundaria-glass);
 }
 
 .section_pesquisar input[type="search"]{
@@ -42,21 +42,23 @@ body {
     text-align: center;
     font-weight: 500;
     font-size: 1.3em;
+    box-shadow: 0px 0px 10px black;
+
 }
 .section_pesquisar input[type="search"]::placeholder{
-    font-weight: 200;
+    font-weight: 300;
     color: var(--cor-terciaria);
     background: url(../imgs/icon_lupa2.svg) no-repeat;
     background-position: 1em;
 }
 .section_pesquisar input[type="search"]:focus{
-    border: 2px solid var(--cor-secundaria);
+    border: 2px solid var(--cor-secundaria-glass);
 }
 
 /*--------------------------------------------------------------------------------*/
 
 .section_navegar .navegar-subtitulo{
-    color: var(--cor-secundaria);
+    color: var(--cor-secundaria-glass);
 }
 
 .section_navegar .container_button{
@@ -72,7 +74,7 @@ body {
 }
 
 .button_link:hover{
-    color: var(--cor-secundaria);
+    color: var(--cor-secundaria-glass);
 }
 .button_link i{
     font-size: 4rem;
@@ -81,7 +83,7 @@ body {
 /*-------------------------------------------------------------------------------*/
 
 .categoria-subtitulo{
-    color: var(--cor-secundaria);
+    color: var(--cor-secundaria-glass);
 }
 
 .section_categoria .lista_categorias{
