--- a/stardustPlay/css/signUp.css
+++ b/stardustPlay/css/signUp.css
@@ -5,6 +5,7 @@ body{
 .container{
     display: flex;
     height: 100vh;
+    overflow: hidden;
 }
 
 .homeLink{
@@ -25,7 +26,7 @@ body{
     justify-content: space-between;
     height: 100vh;
     width: 50%;
-    padding: 10% 10% 10%;
+    padding: 15vh 5vw 10vh;
     background-color: var(--cor-primaria-glass);
 }
 
@@ -65,9 +66,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2em;
+    padding: 1em 2em;
     border-radius: 2em;
     background-color: var(--cor-primaria-glass);
+    font-size: 14px;
 }
 .formulario_content>label{
     display: flex;
@@ -75,8 +77,9 @@ body{
     align-items: center;
     border-radius: 50%;
     color: var(--cor-primaria);
-    width: 10em;
-    height: 10em;
+    flex-basis: 1;
+    height: 8em;
+    aspect-ratio: 1;
     overflow: hidden;
     border: 3px double var(--cor-secundaria);
     margin: 0.5em 0 1em;
@@ -109,7 +112,7 @@ body{
 .formulario_content form input[type='text'], input[type='password']{
     all: unset;
     width: 20em;
-    height: 2em;
+    padding: 0.3em 0 0.3em 1em;
     background-color: var(--cor-primaria);
     padding-left: 1em;
     border: 2px solid rgba(255, 255, 255, 0.507);
