--- a/stardustPlay/css/formGame.css
+++ b/stardustPlay/css/formGame.css
@@ -1,4 +1,5 @@
 .titulo{
+    font-family: var(--fonte-titulo);
     margin: 3em 0 2em;
     text-align: center;
 }
@@ -24,7 +25,8 @@
 textarea{
     display: block;
     overflow-wrap: break-word;
-    height: 15em;
+    flex: 1 1 15em;
+    margin-bottom: 0em;
 }
 
 .container_datagame input:focus, select:focus, textarea:focus{
@@ -100,7 +102,7 @@ input[type="checkbox"]{
     gap: 1em;
 }
 .img_screen{
-    flex: 1 1 15em;
+    flex: 1 1 20em;
     aspect-ratio: 16/9;
 }
 
@@ -132,6 +134,10 @@ input[type="checkbox"]{
 }
 .container_upload:active{
     color: var(--cor-quarta);
+}
+
+.titulo_plataforma{
+    text-align: center;
 }
 
 .container_lbl_plataforma input[type="checkbox"]{
