--- a/stardustPlay/css/pagInicial.css
+++ b/stardustPlay/css/pagInicial.css
@@ -29,7 +29,7 @@ body {
 
 .section_pesquisar .pesquisar-titulo{
     font-size: 3.5rem;
-    font-family: var(--fonte-titulo2);
+    font-family: var(--fonte-titulo);
     color: var(--cor-secundaria-glass);
 }
 
@@ -58,6 +58,7 @@ body {
 /*--------------------------------------------------------------------------------*/
 
 .section_navegar .navegar-subtitulo{
+    font-family: var(--fonte-nome);
     color: var(--cor-secundaria-glass);
 }
 
@@ -83,6 +84,7 @@ body {
 /*-------------------------------------------------------------------------------*/
 
 .categoria-subtitulo{
+    font-family: var(--fonte-nome);
     color: var(--cor-secundaria-glass);
 }
 
