--- a/stardustPlay/css/pagJogos.css
+++ b/stardustPlay/css/pagJogos.css
@@ -62,14 +62,15 @@ input[type='radio'] {
 }
 .plataforma_titulo{
     text-align: center;
-    font-family: var(--fonte-titulo2);
+    font-family: var(--fonte-titulo);
     font-weight: 400;
     font-size: 1.8rem;
     color: var(--cor-secundaria);
 }
 .categoria_slogan{
     padding-left: 2em;
-    font-family: var(--fonte-titulo1);
+    font-family: var(--fonte-titulo);
+    font-weight: 400;
 }
 
 .plataform_container_cate{
@@ -124,8 +125,8 @@ input[type='radio'] {
 }
 
 .card_nome{
-    font-family: var(--fonte-titulo-jogo);
-    font-weight: 300;
+    font-family: var(--fonte-nome);
+    font-size: 1.4rem;
 }
 
 .card_categoria{
