--- a/stardustPlay/css/signIn.css
+++ b/stardustPlay/css/signIn.css
@@ -15,7 +15,7 @@ body{
     position: absolute;
     top: 0.2em;
     left: 0.2em;
-    font-size: 3rem;
+    font-size: 2.5rem;
     border-radius: 1em;
     transition: 0.3s;
 }
@@ -39,6 +39,7 @@ body{
 .texto_titulo{
     letter-spacing: 0.1em;
     font-size: 32px;
+    font-family: var(--fonte-titulo);
     color: var(--cor-secundaria);
 }
 
@@ -57,16 +58,39 @@ body{
     background-color: var(--cor-primaria);
     padding: 1em 0 1em 1em;
     border-radius: 3em;
-    margin-bottom: 1em;
+    width: 100%;
 }
 
 .form_email,
 .form_pass{
+    position: relative;
     border: 1px solid var(--cor-terciaria);
 }
 .form_email:focus,
 .form_pass:focus{
     border: 1px solid var(--cor-secundaria);
+}
+
+.password_container{
+    position: relative;
+}
+.form_email::placeholder{
+    background: url(../imgs/icon_email.svg) no-repeat left center;
+    padding: 2em;
+}
+
+.form_pass::placeholder{
+    padding: 2em;
+    background: url(../imgs/icon_senha.svg) no-repeat left center;
+}
+
+#exibir_olho{
+    position: absolute;
+    bottom: 25%;
+    right: 0em;
+    font-size: 24px;
+    color: var(--cor-secundaria);
+    cursor: pointer;
 }
 
 .form_submit{
