Criação do gameHub
Criação de uma página que reune os jogos disponíveis na StarDust.
Remodelamento da barra de navegação.
Adição de um sistema de hashtags para jogos

--- a/stardustPlay/css/comprarJogo.css
+++ b/stardustPlay/css/comprarJogo.css
@@ -2,6 +2,9 @@ body {
     backdrop-filter: blur(2px);
     overflow-y: hidden;
 }
+header{
+    position: fixed !important;
+}
 
 .content_game {
     position: relative;
