--- a/stardustPlay/css/formGame.css
+++ b/stardustPlay/css/formGame.css
@@ -1,6 +1,6 @@
 .titulo{
     font-family: var(--fonte-titulo);
-    margin: 3em 0 2em;
+    margin: 0 2em;
     text-align: center;
 }
 
@@ -134,6 +134,11 @@ input[type="checkbox"]{
 }
 .container_upload:active{
     color: var(--cor-quarta);
+}
+
+#mensage_tags{
+    color: var(--cor-quinta);
+    text-transform: inherit;
 }
 
 .titulo_plataforma{
