--- a/stardustPlay/css/pagPerfil.css
+++ b/stardustPlay/css/pagPerfil.css
@@ -2,13 +2,10 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    padding: 10vh 5vw 0vh;
+    padding: 5vh 5vw;
     width: 100vw;
     height: 100vh;
 }
-
-
-
 .perfil-user {
     display: flex;
     justify-content: space-between;
@@ -93,7 +90,6 @@
 .container_jogos{
     display: flex;
     flex-wrap: wrap;
-    overflow-y: scroll;
     gap: 1em;
 }
 .container_jogos::-webkit-scrollbar{
